--- a/index.html
+++ b/index.html
@@ -3,23 +3,39 @@
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css" />
 		<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	</head>
 	<body>
 		<script>
 			d3.csv("kepco_01.csv", function(data) {
 				data.forEach(function(d) {
-					d.values = +d.values;
+					d.PN = +d.PN;
+					d.public_GA = +d.public_GA;
+					d.nonUtil_sum = +d.nonUtil_sum;
 				});
 
-				var margin = {top: 50, right: 50, bottom: 50, left: 50};
-				var width = window.innerWidth - margin.right - margin.left;
-				var height = window.innerWidth * 9 / 16 - margin.top - margin.bottom;
+				var margin = {top: 50, right: 50, bottom: 50, left: 75};
+
+				var initWidth = window.innerWidth;
+				var initHeight = window.innerHeight;
+
+				if (initWidth * 9 / 16 < initHeight) {
+					var width = initWidth - margin.right - margin.left;
+					var height = initWidth * 9 / 16 - margin.top - margin.bottom;
+				} else {
+					var width = initHeight * 16 / 9 - margin.right - margin.left;
+					var height = initHeight - margin.top - margin.bottom;
+				}
+
+
 
 				var svg = d3.select("body")
 					.append("svg")
 					.attr("width", width + margin.right + margin.left)
-					.attr("height", height + margin.top + margin.bottom);
+					.attr("height", height + margin.top + margin.bottom)
+					.append("g")
+					.attr("transform", "translate(" + margin.left + ", " + margin.top + ")");
 
 				var xScale = d3.scale.ordinal()
 					.domain(data.map(function(d) {
@@ -29,8 +45,6 @@
 
 				var yScale = d3.scale.linear()
 					.domain([0, d3.max(data, function(d) {
-						console.log(d.year);
-						console.log(d.PN);
 						return d.PN;
 					})])
 					.range([height, 0]);
@@ -52,7 +66,39 @@
 					.attr("class", "axis")
 					.call(yAxis);
 
+				var g_bar = svg.selectAll(".bar")
+					.data(data)
+					.enter()
+					.append("g")
+					.attr("class", "bar");
 
+				g_bar.append("rect")
+					.attr("x", function(d) {
+						return xScale(d.year);
+					})
+					.attr("width", xScale.rangeBand())
+					.attr("y", function(d) {
+						return yScale(d.PN);
+					})
+					.attr("height", function(d) {
+						return height - yScale(d.PN);
+					})
+					.attr("fill", "#FFD34E");
+
+				g_bar.append("rect")
+					.attr("x", function(d) {
+						return xScale(d.year);
+					})
+					.attr("width", xScale.rangeBand())
+					.attr("y", function(d) {
+						var value = d.public_GA + d.nonUtil_sum;
+						return yScale(value);
+					})
+					.attr("height", function(d) {
+						var value = d.public_GA + d.nonUtil_sum;
+						return height - yScale(value);
+					})
+					.attr("fill", "#338833");
 			});
 		</script>
 	</body>
