--- a/index.html
+++ b/index.html
@@ -99,6 +99,21 @@
 						return height - yScale(value);
 					})
 					.attr("fill", "#338833");
+
+				g_bar.append("text")
+					.text(function(d) {
+						var value = Math.round((d.public_GA + d.nonUtil_sum) * 10000 / d.PN) / 100;
+						return value + "%";
+					})
+					.attr("x", function(d) {
+						return xScale(d.year) + xScale.rangeBand() / 2;
+					})
+					.attr("y", function(d) {
+						var value = d.public_GA + d.nonUtil_sum;
+						return yScale(value);
+					})
+					.attr("text-anchor", "middle")
+					.attr("dy", "-5");
 			});
 		</script>
 	</body>
